[gd_scene load_steps=12 format=2]

[ext_resource path="res://KerromancerPlayer/Weapons/Gatling.gd" type="Script" id=1]
[ext_resource path="res://SpriteSheets/Weapons/Gatling.png" type="Texture" id=2]
[ext_resource path="res://SpriteSheets/Weapons/GatlingFire-Sheet.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "Fire",
"speed": 10.0
} ]

[node name="Gatling" type="Node2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 8 )
animation = "Idle"
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="RightPosn" type="Position2D" parent="."]
position = Vector2( 18.9151, 13.6118 )

[node name="LeftPosn" type="Position2D" parent="."]
position = Vector2( -19.1803, 12.9931 )

[node name="DownRightPosn" type="Position2D" parent="."]
position = Vector2( -13.2001, 19.1098 )

[node name="DownLeftPosn" type="Position2D" parent="."]
position = Vector2( 14.0013, 19.0924 )

[node name="UpRightPosn" type="Position2D" parent="."]
position = Vector2( 13.3986, -19.1824 )

[node name="UpLeftPosn" type="Position2D" parent="."]
position = Vector2( -13.4729, -19.0338 )

[node name="Timer" type="Timer" parent="."]
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
